syntax = "proto3";

package common.v1;

message ErrorMessage {
  string message = 1;
}

message BadRequestError {
  message FieldViolation {
    string field = 1;
    repeated string descriptions = 2;
  }

  repeated FieldViolation field_violations = 1;
}
